grammar.js
    source_file: ($) => repeat($._node),

    _node: ($) =>
      choice(
        $.export_statement,
        $.import_statement,
        $.jsx_statement,
        $.heading_statement
      ),

    heading_statement: ($) =>
      seq(
        field('marker', $.heading_marker),
        ' ',
        field('text', $.heading_text)
      ),
    heading_marker: () => /\#{1,6}/,
    heading_text: () => /[a-zA-Z_ \w]*/,

    //
    // Export declarations
    // (from tree-sitter-javascript)
    //

    jsx_statement: ($) => seq($._jsx_expressions, $._semicolon),
    _jsx_expressions: ($) => choice($._jsx_element, $.jsx_fragment),

    _jsx_element_name: ($) =>
      choice($._jsx_identifier, $.nested_identifier, $.jsx_namespace_name),

    jsx_self_closing_element: ($) =>
      seq(
        '<',
        field('name', $._jsx_element_name),
        repeat(field('attribute', $._jsx_attribute)),
        '/',
        '>'
      ),

    _jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

    _jsx_attribute_name: ($) =>
      choice(
        alias($._jsx_identifier, $.property_identifier),
        $.jsx_namespace_name
      ),

    jsx_attribute: ($) =>
      seq($._jsx_attribute_name, optional(seq('=', $._jsx_attribute_value))),

    _jsx_attribute_value: ($) =>
      choice($.string, $.jsx_expression, $._jsx_element, $.jsx_fragment),

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence
            )
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice(
              alias($.unescaped_single_string_fragment, $.string_fragment),
              $.escape_sequence
            )
          ),
          "'"
        )
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    identifier: () => {
      const alpha =
        /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric =
        /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    _semicolon: () => choice(';'),
  },
});

//
// Helpers
// (from tree-sitter-javascript)
//

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
